--- a/ese2021-project-scaffolding/scaffolding/frontend/src/app/post-feed/post/post.component.html
+++ b/ese2021-project-scaffolding/scaffolding/frontend/src/app/post-feed/post/post.component.html
@@ -1,6 +1,6 @@
 <div *ngIf="!preview" class="background">
   <!-- POST  -->
-  <div *ngIf="!editMode">
+  <div *ngIf="!editMode" id="wholePost">
     <a [routerLink]="['/postfeed']"> <span class="link-spanner"></span> </a>
     <div  id="viewPost">
       <div id="postHeader">
@@ -15,9 +15,31 @@
         </span>
         <span id="postTitle">
           <span class="postInfo">
-            <p> Posted in &#183; <span style="border: 1px solid black; border-radius: 4px; font-weight: 500;">{{post.tags}}</span>
+            <span>
+            Posted in &#183; <span style="border: 1px solid black; border-radius: 4px; font-weight: 500;">{{post.tags}}</span>
               &#183; by {{authorName}} {{post.timeSince}} ago
-            </p>      
+            </span>
+            <span>
+              <span *ngIf="user?.userId === post.userId || user?.isAdmin">
+                <button  mat-flat-button color="primary" (click)="editMode = true; loadPicturesToPost()" class="toolButtons">
+                  <span class="iconify" data-icon="ant-design:edit-filled" data-width="16" data-height="16"></span>Edit Post
+                </button>
+                <button mat-flat-button color="warn" (click)="confirmDeleting(post)" class="toolButtons">
+                  <span class="iconify"  data-icon="bi:trash-fill" data-width="16" data-height="16"></span>Delete Post
+                </button>
+                <button mat-flat-button color="warn" (click)="confirmFlagging()" [disabled]="hasFlagged||!loggedIn" class="toolButtons">
+                  <mat-icon>flag</mat-icon>Report
+                  <span *ngIf="user?.isAdmin">({{post.flags}})</span>
+                </button>
+                <button mat-flat-button color="primary" (click)="confirmUnflagging()" *ngIf="user?.isAdmin" class="toolButtons">
+                  unflag post
+                </button>
+
+              </span>
+
+
+            </span>
+
           </span>
           <span class="title">
             <h3>
@@ -29,7 +51,10 @@
       <div id="postDescription" [innerHTML]="post.description"></div>
       <div id="image"></div>
     </div>
-    
+    <div id="comments">
+
+
+    </div>
     <!-- <mat-card> 
       <mat-card-header>
         <div mat-card-avatar></div>
