now saves nrOfImages and nrOfComments to each post

--- a/ese2021-project-scaffolding/scaffolding/frontend/src/app/post-feed/post/post.component.html
+++ b/ese2021-project-scaffolding/scaffolding/frontend/src/app/post-feed/post/post.component.html
@@ -209,8 +209,8 @@
       {{post.noHtmlDescription}}
     </span>
     <span id="suffix">
-      <button mat-icon-button disableRipple="true"> <mat-icon>comment</mat-icon> {{post.comments.length}}</button>
-      <button mat-icon-button disableRipple="true"> <mat-icon>image</mat-icon> {{post.images.length}}</button>
+      <button mat-icon-button disableRipple="true"> <mat-icon>comment</mat-icon> {{post.nrOfComments}}</button>
+      <button mat-icon-button disableRipple="true"> <mat-icon>image</mat-icon> {{post.nrOfImages}}</button>
     </span>
   </div>
 </div>
