--- a/ese2021-project-scaffolding/scaffolding/frontend/src/app/fan-shop/product/product.component.html
+++ b/ese2021-project-scaffolding/scaffolding/frontend/src/app/fan-shop/product/product.component.html
@@ -97,8 +97,8 @@
       <span id="image"></span>
       <button (click)="deleteImages()">delete all images attached to this product</button><br>
 
-        <button *ngIf="existsInBackend" (click)="save()">Save</button>
-        <button *ngIf="!existsInBackend" (click)="createProduct()">Create</button>
+        <button *ngIf="existsInBackend" [disabled]="!isValidFormFill()" (click)="save()">Save</button>
+        <button *ngIf="!existsInBackend" [disabled]="!isValidFormFill()" (click)="createProduct()">Create</button>
       </div>
     </div>
   </div>
