--- a/ese2021-project-scaffolding/scaffolding/frontend/src/app/post-feed/post/post.component.css
+++ b/ese2021-project-scaffolding/scaffolding/frontend/src/app/post-feed/post/post.component.css
@@ -2,6 +2,18 @@
     display: none;
 }
 
+#scrollPost {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    width: 100%;
+    height: 100%;
+
+    overflow-y: scroll;
+
+}
 
 .background {
     background-color: rgb(126, 126, 126);
@@ -10,8 +22,9 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+    justify-content: flex-start;
     position: relative;
+    /* border: solid 5px red; */
 }
 
 .background::before {
@@ -30,24 +43,21 @@
 
 
 #viewPost {
-    width: 80vw;
-    /* height: 100%; */
-    /* padding-top: 10vh; */
-    height: auto;
+    width: 70vw;
+    margin-top: 5vh;
+    padding-bottom: 10vh;
     display: flex;
     flex-direction: column;
     position: relative;
     z-index: 2;
-    border: solid 2px blue;
-    /* justify-self: flex-start; */
-    /* align-self: flex-start; */
+    /* border: solid 2px blue; */
     background-color: aliceblue;
     border-radius: 10px;
     /* overflow-y: scroll; */
 }
 
 #postHeader {
-    border: solid 2px pink;
+    /* border: solid 2px pink; */
     /* position: relative; */
     min-height: 20vh;
     display: flex;
@@ -55,7 +65,7 @@
 }
 
 #postScore {
-    border: solid 2px palevioletred;
+    /* border: solid 2px palevioletred; */
     width: 10%;
     display: flex;
     flex-direction: column;
@@ -64,7 +74,7 @@
 }
 
 #postTitle {
-    border: solid 2px black;
+    /* border: solid 2px black; */
     width: 90%;
     display: flex;
     justify-content: center;
@@ -73,7 +83,7 @@
 }
 
 #postDescription {
-    border: solid 2px yellow;
+    /* border: solid 2px yellow; */
     height: auto;
     /* width: 100%; */
     padding: 20px;
@@ -147,7 +157,7 @@ mat-form-field textarea {
 
 .postInfo {
     width: 100%;
-    border: solid 1px pink;
+    /* border: solid 1px pink; */
     font-size: small;
     margin-bottom: 20px;
     display: flex;
@@ -204,6 +214,14 @@ mat-form-field textarea {
     z-index: 0;
 }
 
+.toolButtons {
+    display: flex;
+    flex-direction: column;
+    /* border: solid 1px orange; */
+    justify-content: flex-end;
+    align-items: flex-end;
+}
+
 button {
     position: relative;
     z-index: 2;
@@ -214,13 +232,8 @@ button:hover {
 }
 
 .mat-flat-button {
-    height: 30px;
-    /* width: 50px; */
-    /* text-align: center; */
-    /* margin-bottom: 10px; */
-    /* margin-bottom: 5px; */
-
-    font-size: 12px;
+    height: 35px;
+    font-size: 10px;
 }
 
 
