--- a/ese2021-project-scaffolding/scaffolding/frontend/src/app/home/home.component.css
+++ b/ese2021-project-scaffolding/scaffolding/frontend/src/app/home/home.component.css
@@ -28,10 +28,24 @@ h1 {
 
 .container {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     justify-content: space-evenly;
     align-items: center;
     height: 545px;
+    border: solid 2px red;
+    position: relative;
+}
+
+.center {
+    border: solid 2px blue;
+}
+
+.left {
+    border: solid 2px yellow;
+}
+
+.right {
+    border: solid 2px green;
 }
 
 .mat-raised-button {
