--- a/ese2021-project-scaffolding/scaffolding/frontend/src/app/fan-shop/fan-shop.component.css
+++ b/ese2021-project-scaffolding/scaffolding/frontend/src/app/fan-shop/fan-shop.component.css
@@ -1,3 +1,98 @@
+
 mat-grid-tile {
-  background: lightblue;
+  background: rgb(255, 255, 255);
+  border-radius: 10px;
+
+}
+
+mat-grid-list {
+  margin-top: 20px;
+  width: 70%;
+  margin-bottom: 20px;
+
+}
+
+mat-form-field#createProduct{
+  width: 70%;
+  border-radius: 10px;
+}
+
+mat-form-field#selectCategory{
+  width: 20%;
+  margin-left: 10px;
+}
+
+
+mat-button-toggle-group {
+  box-shadow: none;
+  border: none;
+}
+
+.mat-button-toggle {
+  border-radius: 20px;
+  /* margin: 5px; */
+  display: flex;
+  align-items: center;
+  background-color: rgb(255, 255, 255);
+  color: black;
+}
+
+mat-button-toggle:hover {
+  background-color: rgb(168, 148, 148);
+}
+
+.mat-button-toggle-checked {
+  background-color: rgb(114, 79, 79);
+}
+
+.feed {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  width: 100%;
+  height: 100%;
+
+  overflow-y: scroll;
+}
+
+
+
+
+.background {
+  position: relative;
+  height: 100vh;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+
+}
+
+
+.background::before {
+  content: "";
+  background-image: url("../../assets/images/kornhausbruecke.jpg");
+  background-size: cover;
+  position: absolute;
+  background-attachment: fixed;
+  top: 0px;
+  right: 0px;
+  bottom: 0px;
+  left: 0px;
+  filter: brightness(50%);
+}
+
+#product {
+  height: 100%;
+  width: 100%;
+  border-radius: 10px;
+}
+
+#product:hover {
+  -webkit-box-shadow:inset 0px 0px 0px 3px rgb(233, 233, 233);
+  -moz-box-shadow:inset 0px 0px 0px 3px rgb(233, 233, 233);
+  box-shadow:inset 0px 0px 0px 3px rgb(233, 233, 233);
 }
