align mat-tab-group in center

--- a/ese2021-project-scaffolding/scaffolding/frontend/src/app/profile/profile.component.html
+++ b/ese2021-project-scaffolding/scaffolding/frontend/src/app/profile/profile.component.html
@@ -1,5 +1,5 @@
 <mat-card>
-  <mat-tab-group>
+  <mat-tab-group mat-align-tabs="center">
     <mat-tab label="Profile information">
       <div class="background">
         <div class="container" color="accent">
