--- a/ese2021-project-scaffolding/scaffolding/frontend/src/app/admin-dashboard/admin-dashboard.component.html
+++ b/ese2021-project-scaffolding/scaffolding/frontend/src/app/admin-dashboard/admin-dashboard.component.html
@@ -1,5 +1,5 @@
 <h1>Welcome, {{user?.username}}!</h1>
-<mat-tab-group>
+<mat-tab-group mat-align-tabs="center">
   <mat-tab label="Flagged Posts"><app-post-feed [feedType]="'flagged'"></app-post-feed></mat-tab>
   <mat-tab label="Orders"><app-order-feed [feedType]="'admin'"></app-order-feed></mat-tab>
   <mat-tab label="Users"><app-user-list></app-user-list></mat-tab>
