now shows image preview in postfeed if post contains only image and no description

--- a/ese2021-project-scaffolding/scaffolding/frontend/src/app/post-feed/post-feed.component.html
+++ b/ese2021-project-scaffolding/scaffolding/frontend/src/app/post-feed/post-feed.component.html
@@ -41,6 +41,7 @@
           <app-post [post]="post"
                   [preview]="true"
                   [postId]="post.postId"
+                  [loadPicture]="post.imageOnly"
                   (update)="updateFeed($event)">
           </app-post>
         </div>
