--- a/ese2021-project-scaffolding/scaffolding/frontend/src/app/fan-shop/product/product.component.html
+++ b/ese2021-project-scaffolding/scaffolding/frontend/src/app/fan-shop/product/product.component.html
@@ -64,10 +64,6 @@
         <span id="productPrice">{{product.price}} CHF</span>
         <mat-card-actions>
         <button mat-flat-button color="primary" (click) = "checkLoggedIn()" *ngIf="!user?.isAdmin">Buy now</button >
-        <span *ngIf="user?.isAdmin">
-            <button  mat-flat-button color="primary" (click)="editMode = true; loadPicturesToProduct()">Edit Product</button>
-            <button mat-flat-button color="warn" (click)="confirmDeleting(product)">Delete Product</button>
-          </span>
         </mat-card-actions>
       </div>
 
@@ -182,7 +178,9 @@
 
 <div *ngIf="!missingProduct">
 <div *ngIf="preview" id="preview">
-  <a [routerLink]="['product', product.productId]"> <span class="link-spanner"></span> </a>
+  <a [routerLink]="['/fan-shop/product', product.productId]"> <span class="link-spanner"></span> </a>
+  <div id="score">
+  </div>
 
   <div id="content">
     <span id="postInfo">
