--- a/ese2021-project-scaffolding/scaffolding/frontend/src/app/profile/profile.component.html
+++ b/ese2021-project-scaffolding/scaffolding/frontend/src/app/profile/profile.component.html
@@ -66,10 +66,10 @@
         </div>
       </div>
     </mat-tab>
-    <mat-tab label="My Posts"><app-post-feed [feedType]="'created'"></app-post-feed></mat-tab>
-    <mat-tab label="Upvoted"><app-post-feed [feedType]="'upvoted'"></app-post-feed></mat-tab>
-    <mat-tab label="Downvoted"><app-post-feed [feedType]="'downvoted'"></app-post-feed></mat-tab>
-    <mat-tab label="Commented"><app-post-feed [feedType]="'commented'"></app-post-feed></mat-tab>
+    <mat-tab label="My Posts"><ng-template matTabContent><app-post-feed [feedType]="'created'"></app-post-feed></ng-template></mat-tab>
+    <mat-tab label="Upvoted"><ng-template matTabContent><app-post-feed [feedType]="'upvoted'"></app-post-feed></ng-template></mat-tab>
+    <mat-tab label="Downvoted"><ng-template matTabContent><app-post-feed [feedType]="'downvoted'"></app-post-feed></ng-template></mat-tab>
+    <mat-tab label="Commented"><ng-template matTabContent><app-post-feed [feedType]="'commented'"></app-post-feed></ng-template></mat-tab>
      <!--Admins can't order Products, They dont have their own order feed-->
     <mat-tab label="Orders" *ngIf="!user?.isAdmin"><app-order-feed [feedType]="'user'"></app-order-feed></mat-tab>
   </mat-tab-group>
